# MIE

./: .gitmodules  CMakeLists.txt  README.md  exp.py  main.c  r.frag  面向远程医疗应用的安全多方加密图像RDH.pptx
resource/: font.frag  font.vert  fragment.glsl  img.frag  img.vert  main.c  r.vert  vertex.glsl
src/: CMakeLists.txt  choice_file.c  choice_file.h  config.c  config.h  debug.h  doctor.c  doctor.h  enc.h  gui.c  gui.h  gui_ID.c  gui_ID.h  gui_base.h  gui_control.c  gui_control.h  gui_draw.c  gui_draw.h  gui_fb.c  gui_fb.h  gui_frame.c  gui_frame.h  gui_program.c  gui_program.h  gui_shader.c  gui_shader.h  gui_str.c  gui_str.h  gui_task.c  gui_task.h  gui_texture.c  gui_texture.h  gui_ttf.c  gui_ttf.h  gui_type.h  gui_widget.c  gui_widget.h  gui_widgetID.c  gui_widgetID.h  gui_widget_button.c  (+42 more)
src/core/: RDH.c  RDH.h  rand.c  rand.h
src/core/include/: RDH.h  rand.h
src/include/: config.h  gui.h  gui_frame.h  gui_shader.h  gui_str.h  gui_texture.h  gui_ttf.h  guiframe.h  list.h  log.h  resource.h
test/: CMakeLists.txt  back.c  back2.c  demo.c  gauss.c  getchar.c  makefile  projection.c  test.c  ttf.c
